--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   padding: 30px;
   border: 1px solid #ffffff40;
   box-shadow: 0 5px 20px rgba(0,0,0,0.4);
-  background-color: linear-gradient(to left ,#BFFF00 0%, #ADD8E6 100%);
+  background: linear-gradient(to left ,#BFFF00 0%, #ADD8E6 100%);
 }
 .image{
   position: relative;
